# wallpaper-magpie

./: .gitignore  Cargo.toml  README.md  README.zh-cn.md  dist-workspace.toml  temp.md
docs/: pexels-api.md  unsplash-api.md  wallhaven-api.md
docs/superpowers/plans/: 2025-01-14-wallpaper-magpie.md  2026-05-25-tui-optimization.md
docs/superpowers/specs/: 2025-01-14-wallpaper-magpie-design.md  2026-05-25-tui-optimization-design.md
src/: app.rs  cli.rs  config.rs  config_manager.rs  download.rs  error.rs  event.rs  filter_config.rs  lib.rs  main.rs  models.rs  ui.rs
src/components/: dropdown.rs  help_bar.rs  mod.rs  modal.rs  page_one.rs  page_three.rs  page_two.rs
src/providers/: mod.rs  pexels.rs  unsplash.rs  wallhaven.rs
tests/: config_test.rs  pexels_test.rs  unsplash_test.rs  wallhaven_test.rs
tests/providers/: unsplash_test.rs
wix/: main.wxs
